# habit_tracker

api/: example.env  pyproject.toml
api/api/: urls.py  views.py
api/api/migrations/: 0001_initial.py
api/api/serializers/: __init__.py  auth.py
api/api/views/: __init__.py  auth.py
api/api_auth/: apps.py  models.py  serializers.py  urls.py  views.py
api/api_auth/migrations/: 0001_initial.py
api/api_auth/views/: __init__.py  auth.py
api/habit_tracker_api/: asgi.py  base.py  settings.py  urls.py  wsgi.py
api/habits/: models.py  serializers.py  urls.py  views.py
api/habits/migrations/: 0001_initial.py
app/: .prettierrc  example.env  package.json  tailwind.config.ts  tsconfig.json
app/app/: global.scss  layout.tsx  page.tsx  tailwind.css
app/app/(protected)/: layout.tsx  page.tsx
app/app/(protected)/logout/: page.tsx
app/app/(public)/: layout.tsx
app/app/(public)/login/: LoginForm.tsx  page.tsx
app/app/api/auth/[...nextauth]/: route.ts
app/app/auth/login/: page.tsx
app/src/components/atoms/: Button.tsx  TextField.tsx  card.tsx
app/src/components/global/: Container.tsx
app/src/lib/validations/: auth.ts
